# altlinux-branch-diff

./: .gitignore  Makefile  README.md  data.json  pyproject.toml
generate_diff/: __init__.py  parser.py
generate_diff/scripts/: generate_diff.py
