[tool.poetry]
name = "altlinux-branch-diff"
version = "0.1.0"
description = "Generate difference between p10 and sisyphus branches"
authors = ["al-ov73"]
readme = "README.md"
packages = [
    { include = 'generate_diff' }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
requests = "^2.31.0"
argparse = "^1.4.0"

[tool.poetry.scripts]
gendiff = "generate_diff.scripts.generate_diff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
